[gd_scene load_steps=2 format=3 uid="uid://b2vrewtctsacx"]

[ext_resource type="Script" uid="uid://c6118b0cgwyj1" path="res://ui/main_menu/main_menu.gd" id="1_uhj5c"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uhj5c")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
color = Color(0, 0, 0, 0.45098)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -173.5
offset_right = 496.0
offset_bottom = 173.5
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 15
theme_override_font_sizes/font_size = 75
text = "Main Menu"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/icon_hover_pressed_color = Color(0.172833, 0.172833, 0.172833, 1)
theme_override_colors/icon_hover_color = Color(0.299547, 0.299547, 0.299547, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 35
text = "Start"

[node name="SettingsButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/icon_hover_pressed_color = Color(0.172833, 0.172833, 0.172833, 1)
theme_override_colors/icon_hover_color = Color(0.299547, 0.299547, 0.299547, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 35
text = "Settings"

[node name="ExitButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/icon_hover_pressed_color = Color(0.172833, 0.172833, 0.172833, 1)
theme_override_colors/icon_hover_color = Color(0.299547, 0.299547, 0.299547, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 35
text = "Exit"

[connection signal="button_up" from="VBoxContainer/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_button_up"]
[connection signal="button_up" from="VBoxContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_button_up"]
[connection signal="button_up" from="VBoxContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_button_up"]
